tests/compile_fail/not_newtype_variant.stderr
error: All variants must be newtype with one field
 --> tests/compile_fail/not_newtype_variant.rs:2:5
  |
2 | /     pub enum FooOrBar {
3 | |         Foo(Foo, Bar),
4 | |         Baz(Baz),
5 | |     }
  | |_____^
